# faceswap

./: .example_env  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
faceswap/: cli.py  config.py
faceswap/enhance/: enhance_skin_texture.py
faceswap/inpaint/: folder_paths.py  inpaint.py  latent_preview.py
faceswap/inpaint/comfy/: cli_args.py  model_patcher.py
faceswap/inpaint/comfy/cldm/: cldm.py
faceswap/inpaint/comfy/k_diffusion/: deis.py
faceswap/inpaint/comfy/ldm/audio/: autoencoder.py
faceswap/inpaint/comfy/ldm/cosmos/: vae.py
faceswap/inpaint/comfy/ldm/flux/: math.py
faceswap/inpaint/comfy/ldm/lumina/: model.py
faceswap/inpaint/comfy/ldm/modules/: attention.py
faceswap/inpaint/comfy_execution/: caching.py  graph.py  graph_utils.py
faceswap/inpaint/comfy_extras/: nodes_photomaker.py
faceswap/inpaint/custom_nodes/: example_node.py.example
faceswap/inpaint/custom_nodes/comfyui-impact-pack/: .gitignore  .tracking  README.md  disable.py  install.py  node_list.json  requirements.txt
faceswap/inpaint/custom_nodes/comfyui-impact-pack/js/: impact-pack.js  impact-sam-editor.js  impact-segs-picker.js  mask-rect-area-advanced.js  mask-rect-area.js
faceswap/inpaint/custom_nodes/comfyui-impact-pack/test/: advanced-sampler.json  detailer-pipe-test-sdxl.json  detailer-pipe-test.json  impactwildcardprocessor_separate_tests.json  impactwildcardprocessor_yaml_tests.json  loop-test.json  masks.json  regional_prompt.json
faceswap/inpaint/custom_nodes/comfyui-impact-pack/troubleshooting/: TROUBLESHOOTING.md
faceswap/inpaint/custom_nodes/comfyui-inpaint-cropandstitch/: .tracking  README.md  inpaint-cropandstitch_example_workflow.json  inpaint_cropandstitch.py
faceswap/inpaint/custom_nodes/comfyui-inpaint-cropandstitch/js/: showcontrol.js
faceswap/inpaint/custom_nodes/comfyui-kjnodes/: .tracking  README.md  __init__.py  config.json  requirements.txt
faceswap/inpaint/custom_nodes/comfyui-kjnodes/example_workflows/: leapfusion_hunyuuanvideo_i2v_native_testing.json
faceswap/inpaint/custom_nodes/comfyui-kjnodes/nodes/: audioscheduler_nodes.py  batchcrop_nodes.py  curve_nodes.py  image_nodes.py  intrinsic_lora_nodes.py  mask_nodes.py  model_optimization_nodes.py  nodes.py
faceswap/inpaint/custom_nodes/comfyui-kjnodes/utility/: fluid.py  utility.py
faceswap/inpaint/custom_nodes/comfyui-reactor/: .tracking  README.md  README_RU.md  install.bat  install.py  nodes.py
faceswap/inpaint/custom_nodes/comfyui-reactor/scripts/: reactor_faceswap.py  reactor_swapper.py
faceswap/inpaint/custom_nodes/comfyui_essentials/: .gitignore  .tracking  README.md  conditioning.py  histogram_matching.py  image.py  mask.py  misc.py  requirements.txt  sampling.py  segmentation.py  text.py  utils.py  workflow_all_nodes.json
faceswap/inpaint/custom_nodes/efficiency-nodes-comfyui/: .tracking  README.md  efficiency_nodes.py  node_settings.json  tsc_utils.py
faceswap/inpaint/custom_nodes/efficiency-nodes-comfyui/js/: gif_preview.js  previewfix.js  seedcontrol.js  widgethider.js  workflowfix.js
faceswap/inpaint/custom_nodes/efficiency-nodes-comfyui/py/: bnk_adv_encode.py  bnk_tiled_samplers.py  bnk_tiling.py  city96_latent_upscaler.py  smZ_cfg_denoiser.py  smZ_rng_source.py
faceswap/inpaint/custom_nodes/efficiency-nodes-comfyui/workflows/: SimpleEval_Node_Examples.txt
faceswap/inpaint/custom_nodes/rgthree-comfy/: .gitignore  .style.yapf  .tracking
faceswap/inpaint/custom_nodes/rgthree-comfy/py/: image_comparer.py  lora_stack.py  power_prompt_simple.py
faceswap/inpaint/custom_nodes/teacache/: .tracking  __init__.py  nodes.py  nodes_diffusers.py  requirements.txt
faceswap/inpaint/custom_nodes/teacache/examples/: cogvideox.json  flux.json  hunyuanvideo.json  ltx_video.json  pulid_flux.json  wan2.1_i2v.json  wan2.1_t2v.json
faceswap/inpaint/user/default/: comfy.settings.json
faceswap/inpaint/workflow/: Flux_ACE++.json
faceswap/preprocess/: align.py  config.py  masks.py
faceswap/preprocess/models/: __init__.py  base_model.py  face_analysis_model.py  landmark_model.py  mediapipe_face_model.py  predictor.py
faceswap/preprocess/utils/: crop.py  face_align.py  utils.py
(+52 files in other folders)
