[project]
name = "faceswap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.8",
    "av>=14.2.0",
    "click>=8.1.8",
    "comfyui-frontend-package==1.12.14",
    "diffusers>=0.32.2",
    "dvc>=3.59.1",
    "einops>=0.8.1",
    "insightface>=0.7.3",
    "kornia>=0.7.1",
    "mediapipe>=0.10.21",
    "numpy>=1.25.0",
    "onnxruntime-gpu>=1.21.0",
    "opencv-python-headless>=4.11.0.86",
    "piexif>=1.1.3",
    "pillow>=11.1.0",
    "pip>=25.0.1",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.4.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "segment-anything>=1.0",
    "sentencepiece>=0.2.0",
    "simpleeval>=1.0.3",
    "soundfile>=0.13.1",
    "spandrel>=0.4.1",
    "tokenizers>=0.13.3",
    "toml>=0.10.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchsde>=0.2.6",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.28.1",
    "yarl>=1.18.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
faceswap = "faceswap.cli:faceswap"


[tool.black]
line-length = 120
target-version = ['py311']


[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    "E501", # LineTooLong, handled by black
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
